# pokemon_battle_sim

./: Credits.txt  Pipfile  README.md  launcher.py  launcher.spec  server.py
assets/config/: game_config.json
assets/pokemon_data/: Abra.json  Aerodactyl.json  Aipom.json  Alakazam.json  Ampharos.json  Arbok.json  Arcanine.json  Ariados.json  Articuno.json  Azumarill.json  Bayleef.json  Beautifly.json  Beedrill.json  Bellossom.json  Bellsprout.json  Blastoise.json  Blaziken.json  Blissey.json  Bulbasaur.json  Butterfree.json  Cascoon.json  Caterpie.json  Celebi.json  Chansey.json  Charizard.json  Charmander.json  Charmeleon.json  Chikorita.json  Chinchou.json  (+261 more)
battle_system/: animation_handler.py  client.py  engine.py  localhost.py  move_render.py  network.py  player_class.py  trainer_data.py
battle_system/battle_code/: Cargo.toml
battle_system/battle_code/config/: game_config.json
battle_system/battle_code/resources/: display_config.ron
battle_system/battle_code/resources/graphics/battle_backgrounds/: battle_background.ron
battle_system/battle_code/resources/graphics/pokemon_sprites/: pokemon_back.ron  pokemon_front.ron
battle_system/battle_code/resources/graphics/trainer_sprite/: image.py
battle_system/battle_code/src/: audio.rs  battle_ui.rs  main.rs  state.rs
launcher/: launcher.py
trainer_data/: ABE.json  Abrahan.json  aa.json  aaa.json  ab.json  abe.json  abrahan.json  bb.json  bbb.json  bbbb.json  bbbbb.json  ccc.json  jj.json
ui/: create_trainer.py  create_trainer.ui  main_menu.py  main_menu.ui  pvp_menu.py  pvp_menu.ui  updater.py  updater.ui
(+58 files in other folders)
