[package]
name = "battle_code"
version = "0.1.0"
authors = ["zenith110 <thequake@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
glob = "0.3.0"
regex = "1.3.7"
chrono = "0.4"
serde_json = "1.0"
log = { version = "0.4.8", features = ["serde"] }

[dependencies.amethyst]
version = "0.15.0"
features = ["vulkan"]
